[package]
name = "dadbs-node"
version = "0.1.0"
edition = "2021"
authors = ["DADBS Team"]
description = "Decentralized Autonomous Database System Node - TestNet"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
bytes = "1.5"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
socket2 = "0.5"
parking_lot = "0.12"
hex = "0.4"

# Optional LLM Dependencies
candle-core = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
tokenizers = { version = "0.15", optional = true }
safetensors = { version = "0.4", optional = true }

[features]
default = []  # Basic node features only
llm = ["candle-core", "candle-transformers", "candle-nn", "tokenizers", "safetensors"]  # Enable LLM support
cuda = ["llm", "candle-core/cuda", "candle-nn/cuda"]  # Enable CUDA support for LLM

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
rand = "0.8"
